# kolanut

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: macos.yml  windows.yml
cmake/: tinyxml2.em.in
src/: index.md
src/kolanut/: main.cpp
src/kolanut/audio/: Audio.cpp  Audio.h  AudioEngine.h  Sound.h  SoundInstance.h
src/kolanut/audio/miniaudio/: MiniaudioAudioEngine.cpp  MiniaudioAudioEngine.h  MiniaudioSound.h  MiniaudioSoundInstance.cpp  MiniaudioSoundInstance.h
src/kolanut/core/: BuildConfig.h.in  DIContainer.h  Kolanut.cpp  Kolanut.h  Logging.h  Types.h
src/kolanut/events/: EventSystem.h  Events.cpp  Events.h  KeyCodes.h
src/kolanut/events/glfw/: EventSystemGLFW.cpp  EventSystemGLFW.h  KeyCodesMapGLFW.inl
src/kolanut/events/sdl/: EventSystemSDL.cpp  EventSystemSDL.h  KeyCodesMapSDL.inl
src/kolanut/filesystem/: Filesystem.cpp  Filesystem.h  FilesystemEngine.cpp  FilesystemEngine.h
src/kolanut/filesystem/files/: FilesFilesystemEngine.cpp  FilesFilesystemEngine.h
src/kolanut/filesystem/zips/: ZipsFilesystemEngine.cpp  ZipsFilesystemEngine.h
src/kolanut/graphics/: Font.cpp  Font.h  FontSTB.cpp  FontSTB.h  FontSTBTexture.h  GeometryBuffer.cpp  GeometryBuffer.h  Graphics.cpp  Graphics.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h  TextureSTB.cpp  TextureSTB.h  Tilemap.cpp  Tilemap.h  Vertex.h
src/kolanut/graphics/glfw/: RendererGLFW.cpp  RendererGLFW.h
src/kolanut/graphics/ogl/: FontOGL.cpp  FontOGL.h  GeometryBufferOGL.cpp  GeometryBufferOGL.h  OpenGL.h  ProgramOGL.cpp  ProgramOGL.h  RendererOGL.cpp  RendererOGL.h  ShaderOGL.cpp  ShaderOGL.h  TextureOGL.cpp  TextureOGL.h
src/kolanut/graphics/ogl/glad/src/: glad.c
src/kolanut/graphics/ogl/utils/: Context.cpp  Context.h  GenericUtils.cpp  GenericUtils.h
src/kolanut/graphics/ogl/utils/shaders/: Program.cpp  Program.h  Shader.cpp  Shader.h
src/kolanut/graphics/sdl/: FontSDL.cpp  FontSDL.h  RendererSDL.cpp  RendererSDL.h  TextureSDL.cpp  TextureSDL.h
src/kolanut/graphics/vulkan/: FontVK.cpp  FontVK.h  GeometryBufferVK.cpp  GeometryBufferVK.h  ProgramVK.cpp  ProgramVK.h  RendererVK.cpp  RendererVK.h  ShaderVK.cpp  ShaderVK.h  TextureVK.cpp  TextureVK.h
src/kolanut/graphics/vulkan/utils/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  DeviceDependent.h  Fence.cpp  Fence.h  GeometryBuffer.cpp  GeometryBuffer.h  Helpers.cpp  Helpers.h  Instance.cpp  Instance.h  MappedMemory.h  MemoryManager.cpp  MemoryManager.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  Pipeline2D.cpp  Pipeline2D.h  QueryPool.cpp  QueryPool.h  Queue.cpp  Queue.h  QueueFamily.h  RenderPass.cpp  RenderPass.h  Semaphore.cpp  Semaphore.h  ShaderModule.cpp  ShaderModule.h  StagedBuffer.cpp  (+9 more)
src/kolanut/libs/: update_stb.sh
src/kolanut/scripting/: Scripting.cpp  Scripting.h  ScriptingEngine.h
src/kolanut/scripting/melon/: KeyCodesNames.inl  ScriptingEngineMelon.cpp  ScriptingEngineMelon.h
src/kolanut/scripting/melon/bindings/: Bindings.cpp  Bindings.h  Camera.cpp  Camera.h  Camera.md  Font.cpp  Font.h  Font.md  Sound.cpp  Sound.h  Sound.md  SoundInstance.cpp  SoundInstance.h  SoundInstance.md  Texture.cpp  Texture.h  Texture.md  Tilemap.cpp  Tilemap.h  Tilemap.md  TilemapFFI.h  Tracy.cpp  Tracy.h  Tracy.md  Transform3D.cpp  Transform3D.h  Transform3D.md
src/kolanut/scripting/melon/ffi/: Closures.h  FFI.h  Modules.h  OOP.cpp  OOP.h  PopContainers.h  PopPrimitives.h  PopVectors.h  PushContainers.h  PushPrimitives.h  PushVectors.h
src/kolanut/scripting/melon/modules/: BoundingboxModule.cpp  BoundingboxModule.h  ColorModule.cpp  ColorModule.h  KolanutModule.cpp  KolanutModule.h  KolanutModule.md  RectModule.cpp  RectModule.h  SourceModule.cpp  SourceModule.h  SourceModule.md  SpriteModule.cpp  SpriteModule.h  SpriteModule.md  Vector2Module.cpp  Vector2Module.h  Vector3Module.cpp  Vector3Module.h  Vector4Module.cpp  Vector4Module.h  VectorModule.cpp  VectorModule.h
src/kolanut/scripting/melon/modules/sources/: BoundingBox.md  BoundingBox.ms  Color.md  Color.ms  Rect.md  Rect.ms  SourceModuleTemplate.cpp.temp  SourceModuleTemplate.h.temp  Sprite.ms  Vector.ms  Vector2.md  Vector2.ms  Vector3.md  (+4 more)
src/kolanut/stats/: DummyStats.h  Stats.cpp  Stats.h  StatsEngine.h
src/kolanut/utils/: EnumHasher.h
tests/assets/: Forest 16 Colors.tsx  main.frag  main.frag.ogl  main.vert  main.vert.ogl  main.vert.vk  mainv.frag  mainv.sfrag  mainv.svert  mainv.vert  map.tmx  solid.frag.ogl  solid.frag.vk
tests/assets/scripts/: boot.ms  config.ms
tests/assets/scripts/ecs/: Entity.ms  QuadTree.ms  Scene.ms  World.ms  index.ms
tests/assets/scripts/ecs/components/: Camera.ms  Collider.ms  Component.ms  FrameAnimation.ms  Label.ms  Rigidbody.ms  SpriteRenderer.ms  TileCollider.ms  Tilemap.ms  Transform.ms  index.ms
tests/assets/scripts/ecs/events/: Collision.ms  Event.ms  index.ms
tests/assets/scripts/ecs/systems/: CameraSystem.ms  CollisionSystem.ms  CullingSystem.ms  DebugRectSystem.ms  FrameAnimationSystem.ms  LabelRenderSystem.ms  PanControllerSystem.ms  PatrollingSystem.ms  PlatformSystem.ms  PlayerSystem.ms  QuadTreeSystem.ms  RigidbodySystem.ms  SceneGraphSystem.ms  SpriteRenderSystem.ms  System.ms  TilemapCollisionSystem.ms  TilemapRenderSystem.ms  index.ms
tests/assets/scripts/game/: Assets.ms  index.ms
tests/assets/scripts/game/components/: Collectible.ms  index.ms
tests/assets/scripts/game/events/: OnPlayerDeath.ms  OnPlayerFall.ms  OnPlayerHit.ms  index.ms
tests/assets/scripts/game/prefabs/: Camera.ms  ForestMap.ms  GameOverLabel.ms  Goblin.ms  Hero.ms  Kitten.ms  Map.ms  index.ms
tests/assets/scripts/game/scenes/: Game.ms  index.ms
tests/assets/scripts/game/systems/: CollectibleSystem.ms  PatrollingSystem.ms  PlatformSystem.ms  PlayerSystem.ms  index.ms
tests/assets/scripts/game/ui/: Lives.ms  Stats.ms  index.ms
tests/assets/scripts/utils/: Array.ms  index.ms
tools/melon-docs/: index.js  index.md  package.json  template.md
(+10 files in other folders)
